# bookshelf

./: .gitignore  README.md  manage.py  pyproject.toml
books/: apps.py  models.py  serializers.py  urls.py  views.py
books/fixtures/: books_fixtures.json
books/tests/: tests.py
bookshelf/: __init__.py  celery.py  exceptions.py  settings.py  urls.py
user_sessions/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
user_sessions/fixtures/: user_sessions_fixtures.json
user_sessions/tests/: tests.py
users/: models.py  serializers.py  urls.py  views.py
users/fixtures/: users_fixtures.json
users/tests/: tests.py
