[tool.poetry]
name = "bookshelf"
version = "0.1.0"
description = ""
authors = ["jeSoosRemirez <dkhomych0091@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
django = "4.2"
python-dotenv = "^1.0.0"
djangorestframework-simplejwt = "^5.3.1"
drf-user-activity-tracker = "^1.0.1"
celery = "^5.3.6"
django-celery-beat = "^2.5.0"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
sphinx = "^7.2.6"
ruff = "^0.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

indent-style = "tab"

skip-magic-trailing-comma = false

line-ending = "auto"